Worked out the layout, improved the project

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Game</title>
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/font-family/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <header>
-    <h1>Rock Paper Scissors</h1>
+  <h1><span>✦</span>Rock-Paper-Scissors<span>✦</span></h1>
   </header>
   <main>
     <section class="choices">
-      <button class="choice" id="rock">Rock</button>
-      <button class="choice" id="paper">Paper</button>
-      <button class="choice" id="scissors">Scissors</button>
+      <div class="own"><button class="choice" id="rock"></button></div>
+      <div class="own"><button class="choice" id="paper">Paper</button></div>
+      <div class="own"><button class="choice" id="scissors">Scissors</button></div>
     </section>
     <section class="results">
       <p id="user-choice">Your Choice: N/A</p>
