Setting goals for tomorrow

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <main>
     <section class="choices">
       <div class="own"><button class="choice" id="rock"></button></div>
-      <div class="own"><button class="choice" id="paper">Paper</button></div>
-      <div class="own"><button class="choice" id="scissors">Scissors</button></div>
+      <div class="own"><button class="choice" id="paper"></button></div>
+      <div class="own"><button class="choice" id="scissors"></button></div>
     </section>
     <section class="results">
       <p id="user-choice">Your Choice: N/A</p>
