--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+  <div class="content">
 <header>
-  <h1><span>✦</span>Rock-Paper-Scissors<span>✦</span></h1>
+  <h1><span class="icons">✦</span>Rock Paper Scissors<span class="icons">✦</span></h1>
   </header>
   <main>
     <section class="choices">
@@ -19,11 +20,21 @@
       <div class="own"><button class="choice" id="scissors"></button></div>
     </section>
     <section class="results">
-      <p id="user-choice">Your Choice: N/A</p>
-      <p id="computer-choice">Computer's Choice: N/A</p>
-      <p id="result-message">Result: N/A</p>
+      <p id="user-choice" class="result-item">Your Choice: undefined</p>
+      <p id="computer-choice" class="result-item">Computer's Choice: undefined</p>
+      <p id="player-score" class="result-item">Your score: 0</p>
+      <p id="computer-score" class="result-item">Computer score: 0</p>
+      <p id="result-message" class="result-item">Result: undefined</p>
     </section>
+    
+    <div class="modal" id="endgameModal">
+      <p class="modal-title" id="endgameMsg"></p>
+      <button class="btn btn-restart" id="restartBtn">Play again</button>
+    </div>
+    
   </main>
+  </div>
+  <footer>Copyright © 2023 by CarryMain <a href="https://github.com/CarryMain" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a> </footer>
     <script src="app.js"></script>
 </body>
 </html>
