--- a/index.html
+++ b/index.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Game</title>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/font-family/font.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
-  <div class="content">
-<header>
-  <h1><span class="icons">✦</span>Rock Paper Scissors<span class="icons">✦</span></h1>
-  </header>
-  <main>
-    <section class="choices">
-      <div class="own"><button class="choice" id="rock"></button></div>
-      <div class="own"><button class="choice" id="paper"></button></div>
-      <div class="own"><button class="choice" id="scissors"></button></div>
-    </section>
-    <section class="results">
-      <p id="user-choice" class="result-item">Your Choice: undefined</p>
-      <p id="computer-choice" class="result-item">Computer's Choice: undefined</p>
-      <p id="player-score" class="result-item">Your score: 0</p>
-      <p id="computer-score" class="result-item">Computer score: 0</p>
-      <p id="result-message" class="result-item">Result: undefined</p>
-    </section>
-    
-    <div class="modal" id="endgameModal">
-      <p class="modal-title" id="endgameMsg"></p>
-      <button class="btn btn-restart" id="restartBtn">Play again</button>
-    </div>
-    
-  </main>
-  </div>
-  <footer>Copyright © 2023 by CarryMain <a href="https://github.com/CarryMain" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a> </footer>
-    <script src="app.js"></script>
-</body>
-</html>
+Hello, World
